log
Wed 27 Mar 2024 08:27:09 PM UTC: 
 list.c | 88 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 77 insertions(+), 11 deletions(-)
 tests:  10|2
total_score: 45/70
a59d646
Fri 29 Mar 2024 11:26:11 PM UTC: 
 list.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:126:14: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  126 |       return NULL;
      |              ^~~~
list.c:122:6: note: declared here
  122 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
list.c:152:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  152 |     return datos;
      |            ^~~~~
list.c:122:6: note: declared here
  122 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
list.c: At top level:
list.c:155:1: error: expected identifier or ‘(’ before ‘}’ token
  155 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8a04621
Fri 29 Mar 2024 11:27:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:152:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  152 |     return datos;
      |            ^~~~~
list.c:122:6: note: declared here
  122 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
list.c: At top level:
list.c:155:1: error: expected identifier or ‘(’ before ‘}’ token
  155 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
be37def
Fri 29 Mar 2024 11:35:06 PM UTC: 
 list.c | 48 +++++++++++++++++++++++++++++-------------------
 1 file changed, 29 insertions(+), 19 deletions(-)
In file included from test.c:5:
list.c:181:1: error: expected identifier or ‘(’ before ‘}’ token
  181 | }
      | ^
Compilation failed
87f897f
Fri 29 Mar 2024 11:35:49 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c:190:1: error: expected identifier or ‘(’ before ‘}’ token
  190 | }
      | ^
Compilation failed
5c50413
